# RobotRos2001

./: README.md
src/TITA-SDK-ROS2/: README.md
src/TITA-SDK-ROS2/tita_bringup/: CMakeLists.txt  package.xml
src/TITA-SDK-ROS2/tita_bringup/launch/: sdk_launch.py
src/TITA-SDK-ROS2/tita_interfaces/: README.md
src/TITA-SDK-ROS2/tita_interfaces/tita_system_interfaces/: CMakeLists.txt
src/TITA-SDK-ROS2/user_command/: CMakeLists.txt  package.xml
src/TITA-SDK-ROS2/user_command/launch/: user_command.launch.py
src/TITA-SDK-ROS2/user_command/src/: sdk_command_node.cpp
src/TITA_DRL/: CMakeLists.txt  package.xml
src/TITA_DRL/config/policy/: params_57.yaml  params_p.yaml  policy_57_1.onnx  policy_57_2.onnx  policy_p.onnx
src/TITA_DRL/launch/: tita_drl.launch.py
src/TITA_DRL/src/: tita_drl_obs57.cpp
src/TITA_Description/tita/xacro/: ros2control.xacro
src/TITA_Pointfoot_Description/tita/urdf/: robot.urdf
src/TITA_Pointfoot_Description/tita/xacro/: ros2control.xacro
src/TITA_ROS2_Control_Sim/: README.md
src/TITA_ROS2_Control_Sim/custom_joint_position_controller/: CMakeLists.txt  package.xml
src/TITA_ROS2_Control_Sim/custom_joint_position_controller/scripts/: qt_joint_controller.py  qt_pid_controller.py
src/TITA_ROS2_Control_Sim/custom_joint_position_controller/src/: joint_position_controller.cpp  joint_pub_position.cpp
src/TITA_ROS2_Control_Sim/gazebo_bridge/launch/: gazebo_bridge.launch.py
src/TITA_ROS2_Control_Sim/sim_bringup/config/: controllers.yaml
src/TITA_ROS2_Control_Sim/sim_bringup/launch/: sim_bringup.launch.py
(+3 files in other folders)
